Committing all of my local changes

--- a/exp-refgoog/build_refgoog_imdb_neg_samples.ipynb
+++ b/exp-refgoog/build_refgoog_imdb_neg_samples.ipynb
@@ -44,7 +44,12 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=9.09s)\n",
+      "Done (t=18.65s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "Dataset loaded.\n",
+      "loading annotations into memory...\n",
+      "Done (t=20.70s)\n",
       "creating index...\n",
       "index created!\n",
       "Dataset loaded.\n"
@@ -57,31 +62,17 @@
     "refexp_filename_val='./exp-refgoog/refgoog-dataset/google_refexp_dataset_release/google_refexp_val_201511_coco_aligned.json'\n",
     "coco_filename='./exp-refgoog/coco-dataset/annotations/instances_train2014.json'\n",
     "val_filename='./exp-refgoog/coco-dataset/annotations/instances_val2014.json'\n",
-    "image_dir = './exp-refgoog/coco-dataset/images/train2014/'\n",
-    "val_image_dir = './exp-refgoog/coco-dataset/images/val2014/'\n",
-    "\n",
-    "#Multi object tests\n",
-    "refexp_multiobject = './exp-refgoog/refgoog-dataset/google_refexp_dataset_release/multiobject_instances_val.json'\n",
-    "refexp_multiobject_people = './exp-refgoog/refgoog-dataset/google_refexp_dataset_release/multiobject_instances_people_val.json'\n",
-    "\n",
-    "#Image retrieval test dataset\n",
-    "#refexp_retrieval_data = './dwright-exp-image-ranking/img_ranking_experiment_data.json'\n",
-    "#refexp_retrieval_samecat = './dwright-exp-image-ranking/img_ranking_samecat_data.json'\n",
-    "refexp_retrieval_train_1000 = './dwright-exp-image-ranking/img_ranking_train_1000.json'\n",
+    "image_dir = '/hdd/dustin/data/coco/images/train2014/'\n",
+    "val_image_dir = '/hdd/dustin/data/coco/images/val2014/'\n",
     "\n",
     "# Create Refexp instance.\n",
-    "#refexp_trn = Refexp(refexp_filename_trn, coco_filename)\n",
-    "#refexp_val = Refexp(refexp_filename_val, coco_filename)\n",
-    "#refexp_multi_val = Refexp(refexp_multiobject, coco_filename)\n",
-    "#refexp_multi_people = Refexp(refexp_multiobject_people, coco_filename)\n",
-    "#refexp_retrieval = Refexp(refexp_retrieval_data, coco_filename)\n",
-    "#refexp_samecat = Refexp(refexp_retrieval_samecat, coco_filename)\n",
-    "refexp_train_1000 = Refexp(refexp_retrieval_train_1000, coco_filename)"
+    "refexp_trn = Refexp(refexp_filename_trn, coco_filename)\n",
+    "refexp_val = Refexp(refexp_filename_val, coco_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +85,7 @@
     "#     \"proposals\": [[x1, y1, x2, y2], ...],\n",
     "#     \"misc\": {\"dataset\": \"coco\", ...} }\n",
     "\n",
-    "def build_imdb_from_refexp(refexp, image_dir):\n",
+    "def build_imdb_from_refexp(refexp, image_dir, n_k=5):\n",
     "    imdb = []\n",
     "\n",
     "    imgIds = refexp.getImgIds()\n",
@@ -105,10 +96,27 @@
     "        \n",
     "        proposals = np.array([_convert_bbox(c['bounding_box']) for c in img['region_candidates']])\n",
     "        \n",
-    "        regions = _load_refexp_regions(refexp, img_id)\n",
+    "        \n",
+    "        regions, categories = _load_refexp_regions(refexp, img_id)\n",
+    "        \n",
+    "        #Negative samples, select out of category images\n",
+    "        cat_ids = [id_ for id_ in refexp.catIds if id_ not in categories]\n",
+    "        cat_choices = np.random.choice(len(cat_ids), n_k)\n",
+    "        neg_paths = []\n",
+    "        neg_proposals = []\n",
+    "        for i in range(n_k):\n",
+    "            sample_img_ids = refexp.getImgIds(catIds=cat_ids[cat_choices[i]])\n",
+    "            sample_id = sample_img_ids[np.random.choice(len(sample_img_ids))]\n",
+    "            \n",
+    "            ann_ids_coco = refexp.coco.getAnnIds(sample_id)\n",
+    "            anns_coco = refexp.coco.loadAnns(ann_ids_coco)\n",
+    "            \n",
+    "            neg_paths.append(os.path.join(image_dir, refexp.loadImgs(sample_id)[0]['file_name']))\n",
+    "            neg_proposals.append(np.asarray([_convert_bbox(ann['bbox']) for ann in anns_coco]))\n",
+    "        \n",
     "        misc = {\"dataset\": \"coco-G-Ref\", \"img_id\": img_id}\n",
     "        iminfo = {\"im_path\": im_path, \"regions\": regions, \"proposals\": proposals,\n",
-    "                  \"misc\": misc}\n",
+    "                  \"neg_sample\": {\"im_path\": neg_paths, \"proposals\": neg_proposals}, \"misc\": misc}\n",
     "\n",
     "        imdb.append(iminfo)\n",
     "\n",
@@ -124,6 +132,8 @@
     "    ann_ids_coco = refexp.coco.getAnnIds(img_id)\n",
     "    anns_coco = refexp.coco.loadAnns(ann_ids_coco)\n",
     "    \n",
+    "    categories = [ann['category_id'] for ann in anns_gref]\n",
+    "    \n",
     "    # Align refexp annotations to those in coco\n",
     "    anns_gref_map = {ann_ids_gref[n]: anns_gref[n] for n in range(len(ann_ids_gref))}\n",
     "    for n in range(len(ann_ids_coco)):\n",
@@ -137,7 +147,7 @@
     "    regions = [[_convert_bbox(ann['bbox']),\n",
     "                _load_refexp_sentences(refexp, ann['refexp_ids']),\n",
     "                ann['id']] for ann in anns_coco]\n",
-    "    return regions\n",
+    "    return regions, categories\n",
     "\n",
     "def _load_refexp_sentences(refexp, refexp_ids):\n",
     "    exps = [e['raw'] for e in refexp.loadRefexps(refexp_ids)]\n",
@@ -146,45 +156,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 4090.42it/s]\n"
+      "100%|██████████| 24698/24698 [18:48<00:00, 21.88it/s]\n",
+      "100%|██████████| 4650/4650 [00:03<00:00, 1229.29it/s]\n"
      ]
     }
    ],
    "source": [
-    "#imdb_trn = build_imdb_from_refexp(refexp_trn, image_dir)\n",
-    "#imdb_val = build_imdb_from_refexp(refexp_val, image_dir)\n",
-    "#imdb_multi = build_imdb_from_refexp(refexp_multi_val, image_dir)\n",
-    "#imdb_multi_people = build_imdb_from_refexp(refexp_multi_people, image_dir)\n",
-    "#imdb_ret = build_imdb_from_refexp(refexp_retrieval, image_dir)\n",
-    "#imdb_samecat = build_imdb_from_refexp(refexp_samecat, image_dir)\n",
-    "imdb_train_1000 = build_imdb_from_refexp(refexp_train_1000, image_dir)"
+    "imdb_trn = build_imdb_from_refexp(refexp_trn, image_dir)\n",
+    "imdb_val = build_imdb_from_refexp(refexp_val, image_dir, n_k=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not os.path.isdir('./exp-refgoog/data/imdb'):\n",
     "    os.mkdir('./exp-refgoog/data/imdb')\n",
     "    \n",
-    "#util.io.save_numpy_obj(imdb_trn, './exp-refgoog/data/imdb/imdb_trn.npy')\n",
-    "#util.io.save_numpy_obj(imdb_val, './exp-refgoog/data/imdb/imdb_val.npy')\n",
-    "#util.io.save_numpy_obj(imdb_multi, './exp-refgoog/data/imdb/imdb_multi.npy')\n",
-    "#util.io.save_numpy_obj(imdb_multi_people, './exp-refgoog/data/imdb/imdb_multi_people.npy')\n",
-    "#util.io.save_json(imdb_multi, './exp-refgoog/data/imdb/imdb_multi.json')\n",
-    "#util.io.save_json(imdb_multi_people, './exp-refgoog/data/imdb/imdb_multi_people.json')\n",
-    "#util.io.save_json(imdb_ret, './dwright-exp-image-ranking//imdb_retrieval.json')\n",
-    "#util.io.save_json(imdb_samecat, './dwright-exp-image-ranking//imdb_multi_people.json')\n",
-    "util.io.save_json(imdb_train_1000, './dwright-exp-image-ranking/imdb_train_1000.json')"
+    "util.io.save_json(imdb_trn, '/home/dwright/code/Research/compositional_image_retrieval/exp-googleref/data/imdb/imdb_trn.json')\n",
+    "util.io.save_json(imdb_val, '/home/dwright/code/Research/compositional_image_retrieval/exp-googleref/data/imdb/imdb_val.json')"
    ]
   },
   {
